@@ -1,6 +1,8 @@
 package kr.sparta.rchive.domain.core.service;
 
 import kr.sparta.rchive.domain.comment.service.CommentService;
+import kr.sparta.rchive.domain.post.dto.PostSearchInfo;
+import kr.sparta.rchive.domain.post.dto.TagInfo;
 import kr.sparta.rchive.domain.post.dto.request.PostCreateReq;
 import kr.sparta.rchive.domain.post.dto.request.PostModifyReq;
 import kr.sparta.rchive.domain.post.dto.response.*;
@@ -31,8 +33,8 @@ import org.springframework.data.domain.Pageable;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
+import java.time.LocalDate;
 import java.util.List;
-import java.util.Map;
 import java.util.Objects;
 import java.util.stream.Collectors;
 
@@ -50,52 +52,73 @@ public class PostTagCoreService {
     private final CommentService commentService;
     private final RedisService redisService;
 
-    // TODO : Redis 만들기, paging 적용하기
-    public Page<PostSearchByTagRes> searchPostByTag(String tagName, User user, Pageable pageable) {
-        Long trackId = userService.findUserTrackIdByUserEmail(user.getEmail());   // TODO: 로그인한 유저의 트랙 ID 확인 추후에 레디스와 연결하여
-        // 마지막에 들어간 트랙 받아오는 로직으로 변경
-        Track userTrack = trackService.findTrackById(trackId);
 
-        UserCheckPermission(user.getUserRole(), trackId);   // 로그인한 유저의 권한과 트랙 ID를 통해 열람 권한 확인
+    public Page<PostSearchBackOfficeRes> getPostListInBackOffice(
+            User user, TrackNameEnum trackName, Integer period, PostTypeEnum postType, LocalDate startDate, LocalDate endDate,
+            Integer searchPeriod, Boolean isOpened, Pageable pageable
+    ) {
+        Track track = trackService.findTrackByTrackNameAndPeriod(trackName, period);
+        userRoleAndTrackCheck(user, track);
 
-        String lowerCaseTagName = tagName.toLowerCase();
+        List<Post> postList;
 
-        Tag tag = tagService.findTagBytagName(lowerCaseTagName); // 검색하려는 태그 찾아오는 로직
+        if (postType == null) {
+            postList = postService.findPostListInBackOfficePostTypeAll(track, startDate, endDate, searchPeriod, isOpened);
+        } else {
+            postList = postService.findPostListInBackOffice(track, postType, startDate, endDate, searchPeriod, isOpened);
+        }
 
-        // 검색하려는 태그가 달려있는 교육자료 ID를 리스트로 찾아오는 로직
-        List<Long> postIdList = findPostIdInRedisByRedisIdUseTagAndTrack(tag, userTrack);
+        List<PostSearchBackOfficeRes> responseList = postList.stream()
+                .map(post -> {
+                    List<TagInfo> tagInfoList = post.getPostTagList().stream()
+                            .map(postTag -> TagInfo.builder()
+                                    .tagId(postTag.getTag().getId())
+                                    .tagName(postTag.getTag().getTagName())
+                                    .build()).toList();
 
-        // 교육자료 ID 리스트 중 로그인한 User의 Track에 해당하는 자료만 가져오는 로직
-        postIdList = filterPostByTrackId(postIdList, userTrack, user.getId());
+                    return PostSearchBackOfficeRes.builder()
+                            .postId(post.getId())
+                            .title(post.getTitle())
+                            .postType(post.getPostType())
+                            .tutor(post.getTutor())
+                            .period(post.getTrack().getPeriod())
+                            .isOpened(post.getIsOpened())
+                            .uploadedAt(post.getUploadedAt())
+                            .tagInfoList(tagInfoList)
+                            .build();
+                }).collect(Collectors.toList());
 
-        // 필터링이 끝난 EducationDataId를 키로 갖고 educationData에 달려있는 Tag들의 List를 value로 갖는 Map으로 변경하는 로직
-        Map<Long, List<Long>> postTagMap = postTagService.findPostTagListByTagId(postIdList);
+        int start = (int) pageable.getOffset();
+        int end = Math.min((start + pageable.getPageSize()), responseList.size());
 
-        // 위에서 Map으로 변경시켜놓은 EducationDataId / TagIdList를 실제 데이터들로 바꿔 responseList에 담는 로직
-        List<PostSearchByTagRes> responseList = postTagMap.entrySet().stream()
-                .map(response -> {
-                    Long postId = response.getKey();
-                    List<Long> tagIdList = response.getValue();
+        return new PageImpl<>(responseList.subList(start, end), pageable, responseList.size());
+    }
 
-                    Post post = postService.findPostById(postId);
+    // TODO : Redis 만들기
+    public Page<PostSearchByTagRes> searchPostByTag(TrackNameEnum trackName, Integer period,
+                                                    Long tagId, User user, Pageable pageable) {
+        Track track = trackService.findTrackByTrackNameAndPeriod(trackName, period);
+        userRoleAndTrackCheck(user, track);
+        userCheckPermission(user.getUserRole(), track);
 
-                    Integer period = trackService.findPeriodByTrackId(post.getTrack().getId());
+        List<Post> postList = postService.findPostListByTagIdWithTagList(tagId, track.getId());
 
-                    List<String> tagNameList = tagIdList.stream()
-                            .map(tagService::findTagById)
-                            .map(Tag::getTagName)
-                            .collect(Collectors.toList());
+        List<PostSearchByTagRes> responseList = postList.stream()
+                .map(post -> {
+                    List<TagInfo> tagInfoList = post.getPostTagList().stream()
+                            .map(postTag -> TagInfo.builder()
+                                    .tagId(postTag.getTag().getId())
+                                    .tagName(postTag.getTag().getTagName())
+                                    .build()).collect(Collectors.toList());
 
                     return PostSearchByTagRes.builder()
                             .title(post.getTitle())
                             .tutor(post.getTutor())
                             .uploadedAt(post.getUploadedAt())
                             .postType(post.getPostType())
-                            .isOpened(post.getIsOpened())
-                            .period(period)
-                            .tagNameList(tagNameList)
+                            .tagList(tagInfoList)
                             .build();
-                }).toList();
+                }).collect(Collectors.toList());
 
         int start = (int) pageable.getOffset();
         int end = Math.min((start + pageable.getPageSize()), responseList.size());
@@ -124,7 +147,7 @@ public class PostTagCoreService {
 
         Track track = null;
 
-        if(request.period() != null) {
+        if (request.period() != null) {
             track = findTrackByTrackNameAndPeriod(request.trackName(), request.period());
         }
 
@@ -145,60 +168,69 @@ public class PostTagCoreService {
 
     public PostGetSinglePostRes getPost(User user, Long postId, TrackNameEnum trackName, Integer period) {
         Track track = trackService.findTrackByTrackNameAndPeriod(trackName, period);
-        Post post = postService.findPostById(postId);
-
         userRoleAndTrackCheck(user, track);
+        userCheckPermission(user.getUserRole(), track);
 
-        String content = findContentByPostId(postId);
+        Post post = postService.findPostWithDetailByPostId(postId);
 
-        List<Long> tagIdList = postTagService.findTagIdListByPostId(post.getId());
-        List<String> tagNameList = tagService.findTagNameListBytagIdList(tagIdList);
+        List<TagInfo> tagList = post.getPostTagList().stream()
+                .map(postTag -> {
+                    return TagInfo.builder()
+                            .tagId(postTag.getTag().getId())
+                            .tagName(postTag.getTag().getTagName())
+                            .build();
+                }).toList();
+
+        String detail = "";
+
+        if (!post.getContentList().isEmpty()) {
+            detail = post.getContentList().stream()
+                    .map(Content::getDetail)
+                    .collect(Collectors.joining());
+        }
 
 //        List<CommentRes> commentResList = commentService.findCommentResListByPostId(postId); TODO: 추후에 댓글 추가하며 구현할 예정
 
         return PostGetSinglePostRes.builder()
                 .title(post.getTitle())
                 .videoLink(post.getVideoLink())
-                .content(content)
-                .tagList(tagNameList)
+                .detail(detail)
+                .tagList(tagList)
 //                .commentResList(commentResList) // TODO: 추후에 댓글 추가하며 구현할 예정
                 .build();
     }
 
-    public List<PostGetCategoryPostRes> getPostListByCategory(
-            User user, TrackNameEnum trackName, Integer period, PostTypeEnum postType
-    ) {
+    public Page<PostGetCategoryPostRes> getPostListByCategory(
+            User user, TrackNameEnum trackName, Integer period, PostTypeEnum postType,
+            Pageable pageable) {
 
         Track track = trackService.findTrackByTrackNameAndPeriod(trackName, period);
 
         userRoleAndTrackCheck(user, track);
+        userCheckPermission(user.getUserRole(), track);
 
-        List<Long> postIdList = postService.findPostIdListByPostTypeAndTrackId(postType, track.getId());
+        List<Post> postList = postService.findPostListByPostTypeAndTrackId(user.getUserRole(), postType, track);
 
-        Map<Long, List<Long>> postTagMap = postTagService.findPostTagListByTagId(postIdList);
-
-        List<PostGetCategoryPostRes> responseList = postTagMap.entrySet().stream()
-                .map(response -> {
-                    Long postId = response.getKey();
-                    List<Long> tagIdList = response.getValue();
-
-                    Post post = postService.findPostById(postId);
-
-
-                    List<String> tagNameList = tagIdList.stream()
-                            .map(tagService::findTagById)
-                            .map(Tag::getTagName)
-                            .collect(Collectors.toList());
+        List<PostGetCategoryPostRes> responseList = postList.stream()
+                .map(post -> {
+                    List<TagInfo> tagInfoList = post.getPostTagList().stream()
+                            .map(postTag -> TagInfo.builder()
+                                    .tagId(postTag.getTag().getId())
+                                    .tagName(postTag.getTag().getTagName())
+                                    .build()).toList();
 
                     return PostGetCategoryPostRes.builder()
                             .title(post.getTitle())
                             .tutor(post.getTutor())
                             .uploadedAt(post.getUploadedAt())
-                            .tagNameList(tagNameList)
+                            .tagList(tagInfoList)
                             .build();
-                }).toList();
+                }).collect(Collectors.toList());
 
-        return responseList;
+        int start = (int) pageable.getOffset();
+        int end = Math.min((start + pageable.getPageSize()), responseList.size());
+
+        return new PageImpl<>(responseList.subList(start, end), pageable, responseList.size());
     }
 
     private void createContentByPost(Post createPost, String content) {
@@ -244,67 +276,49 @@ public class PostTagCoreService {
     }
 
     // 유저가 속해있는 트랙의 열람권한을 체크하는 로직
-    private void UserCheckPermission(UserRoleEnum userRole, Long trackId) {
-        if (UserRoleIsUser(userRole)) {
-            if (!trackService.checkPermission(trackId)) {
+    private void userCheckPermission(UserRoleEnum userRole, Track track) {
+        if (userRoleIsUser(userRole) || track.getPeriod() != 0) {
+            if (track.getIsPermission()) {
                 throw new IllegalArgumentException(); // TODO: 추후 커스텀 에러로 변경할 예정
             }
         }
     }
 
-    // 로그인 한 유저가 속해있는 트랙의 데이터만 남기는 로직
-    private List<Long> filterPostByTrackId(List<Long> postIdList, Track userTrack, Long userId) {
-        TrackRoleEnum trackRole = roleService.findTrackRoleByTrackIdAndUserId(userTrack.getId(), userId);
-
-        if (UserTrackRoleIsPM(trackRole)) {
-            return postService.filterPostIdListByTrackName(postIdList, userTrack.getTrackName());
-        }
-
-        return postService.filterPostIdListByTrackId(postIdList, userTrack.getId());
+    private boolean userTrackRoleIsApm(TrackRoleEnum trackRole) {
+        return trackRole == TrackRoleEnum.APM;
     }
 
-    private boolean UserTrackRoleIsPM(TrackRoleEnum trackRole) {
+    private boolean userTrackRoleIsPm(TrackRoleEnum trackRole) {
         return trackRole == TrackRoleEnum.PM;
     }
 
-    private boolean UserRoleIsUser(UserRoleEnum userRole) {
+    private boolean userRoleIsUser(UserRoleEnum userRole) {
         return userRole == UserRoleEnum.USER;
-    }
-
-    private String findContentByPostId(Long postId) {
-        StringBuilder sb = new StringBuilder();
-
-        List<String> contentList =  contentService.findContentByPostId(postId).stream()
-                .filter(content -> content.getId() == 1)
-                .map(Content::getContent)
-                .toList();
-
-        for(String s : contentList) {
-            sb.append(s);
-        }
-
-        return sb.toString();
     }
 
     private void userRoleAndTrackCheck(User user, Track track) {
         List<Role> roleList = roleService.findAllByUserIdApprove(user.getId());
         Role role = null;
 
-        for(Role r : roleList) {
-            if(r.getTrackRole().equals(TrackRoleEnum.PM)) {
+        for (Role r : roleList) {
+            if (userTrackRoleIsPm(r.getTrackRole()) && track.getTrackName().equals(r.getTrack().getTrackName())) {
+                return;
+            }
+
+            if (r.getTrack().equals(track)) {
                 return;
             }
 
             role = r;
         }
 
-        if(role == null) {
+        if (role == null) {
             throw new RoleCustomException(RoleExceptionCode.BAD_REQUEST_NO_ROLE);
         }
 
-        if(!Objects.equals(role.getTrack().getId(), track.getId())) {
-            throw new RoleCustomException(RoleExceptionCode.FORBIDDEN_ROLE_NOT_ACCESS); //TODO: 추후에 커스텀 에러 위치 정할 예정
-
+        if (!Objects.equals(role.getTrack().getId(), track.getId())) {
+            throw new RoleCustomException(RoleExceptionCode.FORBIDDEN_ROLE_NOT_ACCESS);
         }
     }
+
 }
